--- a/app/navbar/navbar.html
+++ b/app/navbar/navbar.html
@@ -6,8 +6,8 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
-      <li><a ng-click='vm.auth.login()'>Login In </a></li>
-      <li><a href="#">Log Out</a></li>
+      <li ng-if='!vm.auth.isAuthenticated()'><a ng-click='vm.auth.login()'>Login In </a></li>
+      <li ng-if='vm.auth.isAuthenticated()'><a ng-click='vm.auth.logout()'>Log Out</a></li>
     </ul>
   </div>
 </nav>
