--- a/app/navbar/navbar.html
+++ b/app/navbar/navbar.html
@@ -6,6 +6,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
+      <li ng-if='vm.auth.isAuthenticated()'><a ui-sref='profile'>Profile</a></li>
       <li ng-if='!vm.auth.isAuthenticated()'><a ng-click='vm.auth.login()'>Login In </a></li>
       <li ng-if='vm.auth.isAuthenticated()'><a ng-click='vm.auth.logout()'>Log Out</a></li>
     </ul>
