--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src='app/home/home.controller.js'></script>
     <script src='app/callback/callback.controller.js'></script>
     <script src="app/auth/auth.service.js"> </script>
+    <script src="app/profile/profile.controller.js"> </script>
 
   </body>
 </html>
