--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <script src='app/callback/callback.controller.js'></script>
     <script src="app/auth/auth.service.js"> </script>
     <script src="app/profile/profile.controller.js"> </script>
-
+    <script src="node_modules/angular-jwt/dist/angular-jwt.js"></script>
   </body>
 </html>
