--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title> Angular Js Auth</title>
     <script src='node_modules/jquery/dist/jquery.js'></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./index.css">
     <base href="/">
   </head>
   <body>
